Space Membership Controller
